--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,6 +16,45 @@ spec:
     spec:
       containers:
         - name: gateway
-          image: localhost:5000/api:v0.1.6
+          image: kwetters6.azurecr.io/api:v0.1.7
+          resources:
+            limits:
+              memory: 500Mi
+              cpu: 500m
           ports:
             - containerPort: 4000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: gateway-service
+spec:
+  selector:
+    app: gateway
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 4000
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: gateway-ingress
+spec:
+  rules:
+    - http:
+        paths:
+          - path: /user
+            pathType: Prefix
+            backend:
+              service:
+                name: gateway-service
+                port:
+                  number: 80
+          - path: /message
+            pathType: Prefix
+            backend:
+              service:
+                name: gateway-service
+                port:
+                  number: 80
