--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/microservices": "^8.4.3",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
+    "amqp-connection-manager": "^4.1.3",
+    "amqplib": "^0.9.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
