--- a/.github/workflows/gatewayWorkflow.yml
+++ b/.github/workflows/gatewayWorkflow.yml
@@ -66,7 +66,7 @@ jobs:
     - run: |
         docker build . -t ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ env.APP_VERSION }}
         docker push ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ env.APP_VERSION }}
-      working-directory: user-service/
+      working-directory: /
       
     # Set the target Azure Kubernetes Service (AKS) cluster. 
     - uses: azure/aks-set-context@v1
