--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -41,7 +41,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: gateway-ingress
+  annotations:
+    kubernetes.io/ingress.class: azure/application-gateway
 spec:
+  tls:
+    - secretName: kwettercertsecret
   rules:
     - http:
         paths:
