--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/typeorm": "^8.0.3",
     "amqp-connection-manager": "^4.1.3",
     "amqplib": "^0.9.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "express-jwt": "^6.1.1",
     "jwks-rsa": "^2.1.4",
     "reflect-metadata": "^0.1.13",
